1998-09-20  Mark Mitchell  <mark@markmitchell.com>

	* class.c (maybe_warn_about_overly_private_class): Reformat.

1998-09-17  Andrew MacLeod  <amacleod@cygnus.com>

	* exception.cc (__cplus_type_matcher): realign some code.

1998-09-16  Mark Mitchell  <mark@markmitchell.com>

	* Make-lang.in (tinfo.o): Use CXXFLAGS when compiling.
	(tinfo2.o): Likewise.
	(exception.o): Likewise.
	(new.o): Likewise.
	(opnew.o): Likewise.
	(opnewnt.o): Likewise.
	(opvnew.o): Likewise.
	(opvnewnt.o): Likewise.
	(opdel.o): Likewise.
	(opdelnt.o): Likewise.
	(opvdel.o): Likewise.
	(opvdelnt.o): Likewise.

1998-09-16  Richard Henderson  <rth@cygnus.com>

        * decl.c (init_decl_processing): Kill __builtin_fp and __builtin_sp.

1998-09-15  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* call.c (build_field_call): handle static data members too

	* typeck.c (comptypes): when comparing pointer types, check
	whether referred types match even in strictest modes

1998-09-15  Mark Mitchell  <mark@markmitchell.com>

	* cp-tree.h: Revert previous change.
	(finish_struct_methods): Remove declaration.
	* class.c: Revert previous change.
	(maybe_warn_about_overly_private_class): New function.
	(finish_struct_methods): Declare here, and make static.  Remove
	unnecessary parameters.  Tidy slightly.  Use
	maybe_warn_about_overly_private_class. 
	(finish_struct_1): Adjust.  Remove check for private constructors,
	now done elsewhere.
	(finish_struct): Adjust.
	
1998-09-15  Andrew MacLeod  <amacleod@cygnus.com>

	* except.c (expand_start_catch_block): No need to check for new
	exception model.
	(process_start_catch_block_old): Deleted.
	(process_start_catch_block): Add call to start_decl_1().
	(expand_end_catch_block): Add call to end_catch_handler().
	* exception.cc (__cplus_type_matcher): Only check the exception 
	language if there is an exception table.

1998-09-15  Andrew MacLeod  <amacleod@cygnus.com>

	* search.c (expand_indirect_vtbls_init): Mark temporary stack slots