@@ -1,3 +1,7 @@
+Mon Sep 21 01:53:05 1998  Felix Lee  <flee@cygnus.com>
+
+        * lex.c (init_lex): Use getenv ("LANG"), not GET_ENVIRONMENT ().
+
 1998-09-20  Mark Mitchell  <mark@markmitchell.com>
 
 	* class.c (maybe_warn_about_overly_private_class): Reformat.
